crates/vite_task_plan/tests/plan_snapshots/fixtures/parallel-and-concurrency/snapshots/query - parallel discards edges.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&compact_plan"
info:
  args:
    - run
    - "-r"
    - "--parallel"
    - build
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/parallel-and-concurrency
---
{
  "#build": [],
  "packages/a#build": [],
  "packages/b#build": [],
  "packages/c#build": []
}
