crates/vite_task_plan/tests/plan_snapshots/fixtures/parallel-and-concurrency/snapshots/query - parallel only affects current level.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&compact_plan"
info:
  args:
    - run
    - "--parallel"
    - build
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/parallel-and-concurrency
---
{
  "#build": {
    "items": [
      {
        "packages/a#build": [
          "packages/b#build"
        ],
        "packages/b#build": [
          "packages/c#build"
        ],
        "packages/c#build": []
      }
    ],
    "neighbors": []
  }
}
